Fix jumping accordion

--- a/client/src/components/Workshop/Countries/Countries.css
+++ b/client/src/components/Workshop/Countries/Countries.css
@@ -9,6 +9,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
+    /* border: solid red; */
 }
 
 .wrapper {
@@ -16,12 +17,14 @@
     margin: 85px auto 100px auto;
     display: flex;
     flex-direction: column;
+    /* border: solid green; */
 }
 
 .workshop-info {
     width: 100%;
     display: flex;
     flex-direction: column;
+    /* border: solid purple; */
 }
 
 .workshop-info > * {
@@ -45,12 +48,19 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    /* border: solid yellow; */
 }
 
 .inner-container-1 {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    /* border: solid black; */
 }
+
+/* .inner-container-2 {
+    border: solid black;
+} */
 
 .accordeon-container {
     padding-top: 25px;
