--- a/client/src/components/Workshop/Countries/compCountries/ImageCards/ImageCards.css
+++ b/client/src/components/Workshop/Countries/compCountries/ImageCards/ImageCards.css
@@ -8,7 +8,6 @@
     height: 320px;
     border-radius: 8px;
     background: #FFFFFF;
-    margin-right: 20px;
     box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.76);
 }
 
