--- a/client/src/components/Workshop/Countries/compCountries/WorkshopDetails/WorkshopDetails.css
+++ b/client/src/components/Workshop/Countries/compCountries/WorkshopDetails/WorkshopDetails.css
@@ -3,6 +3,7 @@
     border-radius: 8px;
     width: 400px;
     height: 500px;
+    margin-left: 55px;
     display: flex;
     flex-direction: column;
     align-items: center;
